kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    cloud.google.com/backend-config: '{"default": "backend-config"}'
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
