kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    # habilitar TLS
    # kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/*
        pathType: Prefix
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 80
